Fixing letter spacing on mobile

--- a/app/assets/stylesheets/_layout/_rsvp.scss
+++ b/app/assets/stylesheets/_layout/_rsvp.scss
@@ -22,6 +22,7 @@
   text-align: center;
   @include breakpoint(s) {
     font-size: 5em;
+    letter-spacing: 5px;
   }
 }
 
